# baracca

./: .dockerignore  Dockerfile  README.md
.github/workflows/: rust.yml
house-fe/: package-lock.json  package.json
house-fe/public/: index.html
house-fe/src/: App.test.tsx  App.tsx  DetailHouse.tsx  InsertHouse.tsx  List.test.tsx  List.tsx  MapHouses.tsx  SwitchInInsertMode.tsx  index.css  index.tsx  setupProxy.js  stops.tsx
preference-be/: .dockerignore  Cargo.toml  recipe.json
preference-be/src/: config.rs  discovery_service.rs  house_service.rs  http_handlers.rs  main.rs  page.test.html  page2.test.html
