[package]
name = "preference-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }
futures = "0.3"

mongodb = "2"
envconfig = "0.10.0"

reqwest = { version = "0.11", features = ["native-tls-vendored", "gzip", "brotli", "deflate"] }
itertools = "0.10.2"

[dev-dependencies]
rstest = "0.12.0"
httpmock = "0.6"
